--- a/project_quake.ipynb
+++ b/project_quake.ipynb
@@ -19,6 +19,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Set base url parameters\n",
+    "base_url = \"https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson\"\n",
+    "magnitude = \"minmagnitude=5\"\n",
+    "limit = \"limit=19999\"\n",
+    "year=15\n",
+    "\n",
+    "# set up lists to hold reponse info\n",
+    "time_ls = []\n",
+    "lat_ls = []\n",
+    "lng_ls = []\n",
+    "depth_ls = []\n",
+    "mag_ls = []\n",
+    "mmi_ls = []\n",
+    "sig_ls = []\n",
+    "felt_ls = []\n",
+    "place_ls = []\n",
+    "\n",
+    "for x in range (0,6):\n",
+    "    time = f\"starttime=20{year}-12-01&endtime=20{year}-12-02\"\n",
+    "    query_url = (f\"{base_url}&{time}&{magnitude}&{limit}\")\n",
+    "    response = requests.get(query_url).json()\n",
+    "\n",
+    "    for i in range (0, len(response[\"features\"])):\n",
+    "        mag_ls.append(response[\"features\"][i][\"properties\"][\"mag\"])\n",
+    "        place_ls.append(response[\"features\"][i][\"properties\"][\"place\"])\n",
+    "        time_ls.append(response[\"features\"][i][\"properties\"][\"time\"])\n",
+    "        felt_ls.append(response[\"features\"][i][\"properties\"][\"felt\"])\n",
+    "        mmi_ls.append(response[\"features\"][i][\"properties\"][\"mmi\"])\n",
+    "        sig_ls.append(response[\"features\"][i][\"properties\"][\"sig\"])\n",
+    "        lat_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][1])\n",
+    "        lng_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][0])\n",
+    "        depth_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][2])\n",
+    "\n",
+    "    year=year+1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                      time  month  day  year      lat       lng   depth  mag  \\\n",
+       "0  2015-12-01 20:20:12.680     12    1  2015  -6.9809  155.5596   51.91  5.0   \n",
+       "1  2015-12-01 17:08:25.130     12    1  2015 -14.8839 -176.5573   10.00  5.8   \n",
+       "2  2015-12-01 13:39:55.090     12    1  2015 -16.3790  -71.1123  117.31  5.0   \n",
+       "3  2015-12-01 12:14:21.780     12    1  2015   1.0112  127.5026   10.00  5.1   \n",
+       "4  2015-12-01 06:13:43.360     12    1  2015  41.3752   73.2570   40.83  5.1   \n",
+       "5  2016-12-01 22:40:26.610     12    1  2016 -15.3122  -70.8270   12.00  6.2   \n",
+       "6  2016-12-01 20:51:55.550     12    1  2016 -35.2021   54.0219   10.00  5.5   \n",
+       "7  2016-12-01 16:52:50.110     12    1  2016  29.9790   80.6321   31.96  5.2   \n",
+       "8  2016-12-01 05:16:26.830     12    1  2016  52.4199  157.7689  116.33  5.0   \n",
+       "9  2016-12-01 00:25:21.380     12    1  2016   9.9485  -83.8069    1.32  5.3   \n",
+       "10 2017-12-01 05:20:28.480     12    1  2017 -48.7787  106.8254   10.00  5.5   \n",
+       "11 2017-12-01 04:31:38.730     12    1  2017 -21.4771  168.6201   10.00  5.1   \n",
+       "12 2017-12-01 03:35:01.840     12    1  2017  30.7151   57.3850   10.00  5.4   \n",
+       "13 2017-12-01 02:49:58.490     12    1  2017  -6.1346  147.6564   34.00  6.0   \n",
+       "14 2017-12-01 02:43:27.200     12    1  2017  30.6973   57.4397   10.00  5.1   \n",
+       "15 2017-12-01 02:32:46.040     12    1  2017  30.7464   57.3070    9.00  6.1   \n",
+       "16 2017-12-01 00:06:13.200     12    1  2017  -6.2980  130.1189  139.55  5.0   \n",
+       "17 2018-12-01 23:55:24.630     12    1  2018 -33.9216  -72.4010   10.00  5.5   \n",
+       "18 2018-12-01 18:24:06.350     12    1  2018 -19.1949 -172.8040   10.00  5.0   \n",
+       "19 2018-12-01 13:27:21.080     12    1  2018  -7.3841  128.7065  136.00  6.4   \n",
+       "20 2018-12-01 12:42:14.810     12    1  2018 -54.2114   -2.1688   10.00  5.3   \n",
+       "21 2018-12-01 07:57:22.619     12    1  2018  61.3548 -149.9913   42.90  5.1   \n",
+       "22 2018-12-01 07:07:37.990     12    1  2018  61.4833 -149.9362   51.30  5.0   \n",
+       "23 2018-12-01 05:49:16.270     12    1  2018 -20.9517 -178.6167  562.42  5.0   \n",
+       "24 2019-12-01 21:22:43.668     12    1  2019 -10.3038  161.2514   65.23  5.1   \n",
+       "25 2019-12-01 05:48:34.645     12    1  2019  -5.1452   68.6183   10.00  5.3   \n",
+       "26 2020-12-01 23:32:56.573     12    1  2020  38.1637 -118.0837    5.00  5.1   \n",
+       "27 2020-12-01 20:52:57.053     12    1  2020 -61.9613  154.7338   10.00  6.0   \n",
+       "28 2020-12-01 17:39:14.347     12    1  2020 -59.9144  -26.7497   96.57  5.1   \n",
+       "29 2020-12-01 16:35:48.199     12    1  2020  53.6935 -150.5900   10.00  5.7   \n",
+       "30 2020-12-01 16:22:39.884     12    1  2020  52.7655 -168.2667   23.00  6.4   \n",
+       "\n",
+       "      mmi  sig   felt                                      place  \n",
+       "0     NaN  385    0.0        73km S of Panguna, Papua New Guinea  \n",
+       "1   3.610  518    0.0   182km SSW of Mata-Utu, Wallis and Futuna  \n",
+       "2     NaN  387    5.0                   45km E of Arequipa, Peru  \n",
+       "3     NaN  400    NaN             25km NNE of Ternate, Indonesia  \n",
+       "4     NaN  402    5.0            43km S of Uch-Terek, Kyrgyzstan  \n",
+       "5   6.366  599   10.0             44km NE of Huarichancara, Peru  \n",
+       "6   0.000  465    NaN                         South Indian Ocean  \n",
+       "7     NaN  420   12.0               17km NNE of Dharchula, India  \n",
+       "8     NaN  385    NaN              66km SSW of Paratunka, Russia  \n",
+       "9   6.308  460   49.0                  9km NE of Cot, Costa Rica  \n",
+       "10  0.000  465    NaN                     Southeast Indian Ridge  \n",
+       "11    NaN  400    1.0            76km E of Tadine, New Caledonia  \n",
+       "12    NaN  451    6.0                   56km NNE of Kerman, Iran  \n",
+       "13  5.232  556    6.0  56km NNW of Finschhafen, Papua New Guinea  \n",
+       "14    NaN  400    NaN                    57km NE of Kerman, Iran  \n",
+       "15  7.127  603   62.0                   55km NNE of Kerman, Iran  \n",
+       "16    NaN  385    NaN            225km NW of Saumlaki, Indonesia  \n",
+       "17  3.980  477   17.0             80km WSW of San Antonio, Chile  \n",
+       "18    NaN  385    NaN                 138km ESE of Neiafu, Tonga  \n",
+       "19  4.045  650   44.0           294km WNW of Saumlaki, Indonesia  \n",
+       "20    NaN  432    NaN                Southern Mid-Atlantic Ridge  \n",
+       "21  4.300  536  234.0              15km NNW of Anchorage, Alaska  \n",
+       "22  4.090  433   68.0                4km SSE of Big Lake, Alaska  \n",
+       "23    NaN  385    NaN              34km SSE of Ndoi Island, Fiji  \n",
+       "24    NaN  400    NaN      75km WNW of Kirakira, Solomon Islands  \n",
+       "25    NaN  432    NaN                  Chagos Archipelago region  \n",
+       "26  5.340  453  130.0                    25 km S of Mina, Nevada  \n",
+       "27  0.000  554    NaN                     Balleny Islands region  \n",
+       "28    NaN  400    NaN              South Sandwich Islands region  \n",
+       "29  0.000  500    1.0                            south of Alaska  \n",
+       "30  7.312  638   10.0              44 km ESE of Nikolski, Alaska  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>month</th>\n      <th>day</th>\n      <th>year</th>\n      <th>lat</th>\n      <th>lng</th>\n      <th>depth</th>\n      <th>mag</th>\n      <th>mmi</th>\n      <th>sig</th>\n      <th>felt</th>\n      <th>place</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2015-12-01 20:20:12.680</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2015</td>\n      <td>-6.9809</td>\n      <td>155.5596</td>\n      <td>51.91</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>0.0</td>\n      <td>73km S of Panguna, Papua New Guinea</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2015-12-01 17:08:25.130</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2015</td>\n      <td>-14.8839</td>\n      <td>-176.5573</td>\n      <td>10.00</td>\n      <td>5.8</td>\n      <td>3.610</td>\n      <td>518</td>\n      <td>0.0</td>\n      <td>182km SSW of Mata-Utu, Wallis and Futuna</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2015-12-01 13:39:55.090</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2015</td>\n      <td>-16.3790</td>\n      <td>-71.1123</td>\n      <td>117.31</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>387</td>\n      <td>5.0</td>\n      <td>45km E of Arequipa, Peru</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2015-12-01 12:14:21.780</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2015</td>\n      <td>1.0112</td>\n      <td>127.5026</td>\n      <td>10.00</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>400</td>\n      <td>NaN</td>\n      <td>25km NNE of Ternate, Indonesia</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2015-12-01 06:13:43.360</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2015</td>\n      <td>41.3752</td>\n      <td>73.2570</td>\n      <td>40.83</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>402</td>\n      <td>5.0</td>\n      <td>43km S of Uch-Terek, Kyrgyzstan</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2016-12-01 22:40:26.610</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2016</td>\n      <td>-15.3122</td>\n      <td>-70.8270</td>\n      <td>12.00</td>\n      <td>6.2</td>\n      <td>6.366</td>\n      <td>599</td>\n      <td>10.0</td>\n      <td>44km NE of Huarichancara, Peru</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2016-12-01 20:51:55.550</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2016</td>\n      <td>-35.2021</td>\n      <td>54.0219</td>\n      <td>10.00</td>\n      <td>5.5</td>\n      <td>0.000</td>\n      <td>465</td>\n      <td>NaN</td>\n      <td>South Indian Ocean</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2016-12-01 16:52:50.110</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2016</td>\n      <td>29.9790</td>\n      <td>80.6321</td>\n      <td>31.96</td>\n      <td>5.2</td>\n      <td>NaN</td>\n      <td>420</td>\n      <td>12.0</td>\n      <td>17km NNE of Dharchula, India</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2016-12-01 05:16:26.830</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2016</td>\n      <td>52.4199</td>\n      <td>157.7689</td>\n      <td>116.33</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>66km SSW of Paratunka, Russia</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2016-12-01 00:25:21.380</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2016</td>\n      <td>9.9485</td>\n      <td>-83.8069</td>\n      <td>1.32</td>\n      <td>5.3</td>\n      <td>6.308</td>\n      <td>460</td>\n      <td>49.0</td>\n      <td>9km NE of Cot, Costa Rica</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2017-12-01 05:20:28.480</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>-48.7787</td>\n      <td>106.8254</td>\n      <td>10.00</td>\n      <td>5.5</td>\n      <td>0.000</td>\n      <td>465</td>\n      <td>NaN</td>\n      <td>Southeast Indian Ridge</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2017-12-01 04:31:38.730</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>-21.4771</td>\n      <td>168.6201</td>\n      <td>10.00</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>400</td>\n      <td>1.0</td>\n      <td>76km E of Tadine, New Caledonia</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2017-12-01 03:35:01.840</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>30.7151</td>\n      <td>57.3850</td>\n      <td>10.00</td>\n      <td>5.4</td>\n      <td>NaN</td>\n      <td>451</td>\n      <td>6.0</td>\n      <td>56km NNE of Kerman, Iran</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>2017-12-01 02:49:58.490</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>-6.1346</td>\n      <td>147.6564</td>\n      <td>34.00</td>\n      <td>6.0</td>\n      <td>5.232</td>\n      <td>556</td>\n      <td>6.0</td>\n      <td>56km NNW of Finschhafen, Papua New Guinea</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>2017-12-01 02:43:27.200</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>30.6973</td>\n      <td>57.4397</td>\n      <td>10.00</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>400</td>\n      <td>NaN</td>\n      <td>57km NE of Kerman, Iran</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>2017-12-01 02:32:46.040</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>30.7464</td>\n      <td>57.3070</td>\n      <td>9.00</td>\n      <td>6.1</td>\n      <td>7.127</td>\n      <td>603</td>\n      <td>62.0</td>\n      <td>55km NNE of Kerman, Iran</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>2017-12-01 00:06:13.200</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2017</td>\n      <td>-6.2980</td>\n      <td>130.1189</td>\n      <td>139.55</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>225km NW of Saumlaki, Indonesia</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>2018-12-01 23:55:24.630</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>-33.9216</td>\n      <td>-72.4010</td>\n      <td>10.00</td>\n      <td>5.5</td>\n      <td>3.980</td>\n      <td>477</td>\n      <td>17.0</td>\n      <td>80km WSW of San Antonio, Chile</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>2018-12-01 18:24:06.350</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>-19.1949</td>\n      <td>-172.8040</td>\n      <td>10.00</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>138km ESE of Neiafu, Tonga</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>2018-12-01 13:27:21.080</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>-7.3841</td>\n      <td>128.7065</td>\n      <td>136.00</td>\n      <td>6.4</td>\n      <td>4.045</td>\n      <td>650</td>\n      <td>44.0</td>\n      <td>294km WNW of Saumlaki, Indonesia</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>2018-12-01 12:42:14.810</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>-54.2114</td>\n      <td>-2.1688</td>\n      <td>10.00</td>\n      <td>5.3</td>\n      <td>NaN</td>\n      <td>432</td>\n      <td>NaN</td>\n      <td>Southern Mid-Atlantic Ridge</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>2018-12-01 07:57:22.619</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>61.3548</td>\n      <td>-149.9913</td>\n      <td>42.90</td>\n      <td>5.1</td>\n      <td>4.300</td>\n      <td>536</td>\n      <td>234.0</td>\n      <td>15km NNW of Anchorage, Alaska</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2018-12-01 07:07:37.990</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>61.4833</td>\n      <td>-149.9362</td>\n      <td>51.30</td>\n      <td>5.0</td>\n      <td>4.090</td>\n      <td>433</td>\n      <td>68.0</td>\n      <td>4km SSE of Big Lake, Alaska</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>2018-12-01 05:49:16.270</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2018</td>\n      <td>-20.9517</td>\n      <td>-178.6167</td>\n      <td>562.42</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>34km SSE of Ndoi Island, Fiji</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>2019-12-01 21:22:43.668</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2019</td>\n      <td>-10.3038</td>\n      <td>161.2514</td>\n      <td>65.23</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>400</td>\n      <td>NaN</td>\n      <td>75km WNW of Kirakira, Solomon Islands</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>2019-12-01 05:48:34.645</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2019</td>\n      <td>-5.1452</td>\n      <td>68.6183</td>\n      <td>10.00</td>\n      <td>5.3</td>\n      <td>NaN</td>\n      <td>432</td>\n      <td>NaN</td>\n      <td>Chagos Archipelago region</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>2020-12-01 23:32:56.573</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>38.1637</td>\n      <td>-118.0837</td>\n      <td>5.00</td>\n      <td>5.1</td>\n      <td>5.340</td>\n      <td>453</td>\n      <td>130.0</td>\n      <td>25 km S of Mina, Nevada</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>2020-12-01 20:52:57.053</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>-61.9613</td>\n      <td>154.7338</td>\n      <td>10.00</td>\n      <td>6.0</td>\n      <td>0.000</td>\n      <td>554</td>\n      <td>NaN</td>\n      <td>Balleny Islands region</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>2020-12-01 17:39:14.347</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>-59.9144</td>\n      <td>-26.7497</td>\n      <td>96.57</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>400</td>\n      <td>NaN</td>\n      <td>South Sandwich Islands region</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>2020-12-01 16:35:48.199</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>53.6935</td>\n      <td>-150.5900</td>\n      <td>10.00</td>\n      <td>5.7</td>\n      <td>0.000</td>\n      <td>500</td>\n      <td>1.0</td>\n      <td>south of Alaska</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>2020-12-01 16:22:39.884</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>52.7655</td>\n      <td>-168.2667</td>\n      <td>23.00</td>\n      <td>6.4</td>\n      <td>7.312</td>\n      <td>638</td>\n      <td>10.0</td>\n      <td>44 km ESE of Nikolski, Alaska</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "data = {\n",
+    "    \"time\": time_ls,\n",
+    "    \"lat\": lat_ls,\n",
+    "    \"lng\": lng_ls,\n",
+    "    \"depth\": depth_ls,\n",
+    "    \"mag\": mag_ls,\n",
+    "    \"mmi\": mmi_ls,\n",
+    "    \"sig\": sig_ls,\n",
+    "    \"felt\": felt_ls,\n",
+    "    \"place\": place_ls\n",
+    "}\n",
+    "data_df = pd.DataFrame(data)\n",
+    "\n",
+    "data_df[\"time\"] = pd.to_datetime(data_df[\"time\"], unit=\"ms\")\n",
+    "data_df[\"month\"] = pd.DatetimeIndex(data_df[\"time\"]).month\n",
+    "data_df[\"day\"] = pd.DatetimeIndex(data_df[\"time\"]).day\n",
+    "data_df[\"year\"] = pd.DatetimeIndex(data_df[\"time\"]).year\n",
+    "\n",
+    "data_df= data_df[[\"time\",\"month\",\"day\",\"year\",\"lat\",\"lng\",\"depth\",\"mag\",\"mmi\",\"sig\",\"felt\",\"place\"]]\n",
+    "data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -41,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
