Update to include all 2010-20

--- a/project_quake.ipynb
+++ b/project_quake.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "\n",
     "# iterate through years\n",
     "for x in range (0,11):\n",
-    "    time = f\"starttime=20{year}-12-01&endtime=20{year}-12-02\"\n",
+    "    time = f\"starttime=20{year}-01-01&endtime=20{year}-12-31\"\n",
     "    query_url = (f\"{base_url}&{time}&{magnitude}&{limit}\")\n",
     "    response = requests.get(query_url).json()\n",
     "\n",
@@ -60,23 +60,16 @@
     "        lng_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][0])\n",
     "        depth_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][2])\n",
     "    # counter for next year\n",
+    "    \n",
     "    year=year+1\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Loading formatted geocoded file...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create dictionary\n",
     "data = {\n",
@@ -99,62 +92,62 @@
     "data_df[\"Day\"] = pd.DatetimeIndex(data_df[\"Time\"]).day\n",
     "data_df[\"Year\"] = pd.DatetimeIndex(data_df[\"Time\"]).year\n",
     "\n",
-    "#add country\n",
-    "data_df[\"Country\"] = \"\"\n",
+    "# #add country\n",
+    "# data_df[\"Country\"] = \"\"\n",
     "\n",
-    "for index, row in data_df.iterrows():\n",
-    "    # get lat, lng from df\n",
-    "    lat = row[\"Lat\"]\n",
-    "    lng = row[\"Lng\"]\n",
-    "    coordinates = (lat,lng)\n",
-    "    result = rg.search(coordinates)\n",
-    "    data_df.loc[index,\"Country\"] = result[0][\"cc\"]"
+    "# for index, row in data_df.iterrows():\n",
+    "#     # get lat, lng from df\n",
+    "#     lat = row[\"Lat\"]\n",
+    "#     lng = row[\"Lng\"]\n",
+    "#     coordinates = (lat,lng)\n",
+    "#     result = rg.search(coordinates)\n",
+    "#     data_df.loc[index,\"Country\"] = result[0][\"cc\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "      Lat      Lng  Depth  Mag    MMI  Sig  Felt                        Place  \\\n",
-       "0 -15.888 -178.956   15.2  6.1    NaN  572   NaN                  Fiji region   \n",
-       "1   2.689   99.041  160.1  5.6  3.663  482   NaN  northern Sumatra, Indonesia   \n",
-       "2 -22.717 -174.858   57.4  5.1    NaN  400   NaN                 Tonga region   \n",
-       "3  -0.626  121.974   10.0  5.5  5.611  466   4.0          Sulawesi, Indonesia   \n",
-       "4  32.175  -40.295   10.0  5.4    NaN  449   NaN  northern Mid-Atlantic Ridge   \n",
+       "       Lat       Lng  Depth  Mag  MMI  Sig  Felt                    Place  \\\n",
+       "0 -31.8300 -178.1350   35.0  5.0  NaN  385   NaN  Kermadec Islands region   \n",
+       "1 -19.9840  168.3530   20.2  5.0  NaN  385   NaN                  Vanuatu   \n",
+       "2  50.3800  153.9640  190.1  5.0  NaN  385   NaN            Kuril Islands   \n",
+       "3  56.7391 -156.1674   58.1  5.0  NaN  385   NaN         Alaska Peninsula   \n",
+       "4   9.9890  126.2490   58.5  5.0  NaN  385   NaN    Mindanao, Philippines   \n",
        "\n",
-       "  Country                    Time  Month  Day  Year  \n",
-       "0      WF 2010-12-01 16:01:27.440     12    1  2010  \n",
-       "1      ID 2010-12-01 00:50:21.730     12    1  2010  \n",
-       "2      TO 2010-12-01 00:09:45.330     12    1  2010  \n",
-       "3      ID 2011-12-01 22:53:36.500     12    1  2011  \n",
-       "4      PT 2011-12-01 21:35:09.740     12    1  2011  "
+       "                     Time  Month  Day  Year  \n",
+       "0 2010-12-30 23:47:03.930     12   30  2010  \n",
+       "1 2010-12-30 21:22:30.350     12   30  2010  \n",
+       "2 2010-12-30 19:56:36.380     12   30  2010  \n",
+       "3 2010-12-30 19:21:26.463     12   30  2010  \n",
+       "4 2010-12-30 16:56:14.930     12   30  2010  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Depth</th>\n      <th>Mag</th>\n      <th>MMI</th>\n      <th>Sig</th>\n      <th>Felt</th>\n      <th>Place</th>\n      <th>Country</th>\n      <th>Time</th>\n      <th>Month</th>\n      <th>Day</th>\n      <th>Year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-15.888</td>\n      <td>-178.956</td>\n      <td>15.2</td>\n      <td>6.1</td>\n      <td>NaN</td>\n      <td>572</td>\n      <td>NaN</td>\n      <td>Fiji region</td>\n      <td>WF</td>\n      <td>2010-12-01 16:01:27.440</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.689</td>\n      <td>99.041</td>\n      <td>160.1</td>\n      <td>5.6</td>\n      <td>3.663</td>\n      <td>482</td>\n      <td>NaN</td>\n      <td>northern Sumatra, Indonesia</td>\n      <td>ID</td>\n      <td>2010-12-01 00:50:21.730</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-22.717</td>\n      <td>-174.858</td>\n      <td>57.4</td>\n      <td>5.1</td>\n      <td>NaN</td>\n      <td>400</td>\n      <td>NaN</td>\n      <td>Tonga region</td>\n      <td>TO</td>\n      <td>2010-12-01 00:09:45.330</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.626</td>\n      <td>121.974</td>\n      <td>10.0</td>\n      <td>5.5</td>\n      <td>5.611</td>\n      <td>466</td>\n      <td>4.0</td>\n      <td>Sulawesi, Indonesia</td>\n      <td>ID</td>\n      <td>2011-12-01 22:53:36.500</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2011</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>32.175</td>\n      <td>-40.295</td>\n      <td>10.0</td>\n      <td>5.4</td>\n      <td>NaN</td>\n      <td>449</td>\n      <td>NaN</td>\n      <td>northern Mid-Atlantic Ridge</td>\n      <td>PT</td>\n      <td>2011-12-01 21:35:09.740</td>\n      <td>12</td>\n      <td>1</td>\n      <td>2011</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Depth</th>\n      <th>Mag</th>\n      <th>MMI</th>\n      <th>Sig</th>\n      <th>Felt</th>\n      <th>Place</th>\n      <th>Time</th>\n      <th>Month</th>\n      <th>Day</th>\n      <th>Year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-31.8300</td>\n      <td>-178.1350</td>\n      <td>35.0</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Kermadec Islands region</td>\n      <td>2010-12-30 23:47:03.930</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-19.9840</td>\n      <td>168.3530</td>\n      <td>20.2</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Vanuatu</td>\n      <td>2010-12-30 21:22:30.350</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50.3800</td>\n      <td>153.9640</td>\n      <td>190.1</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Kuril Islands</td>\n      <td>2010-12-30 19:56:36.380</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>56.7391</td>\n      <td>-156.1674</td>\n      <td>58.1</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Alaska Peninsula</td>\n      <td>2010-12-30 19:21:26.463</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>9.9890</td>\n      <td>126.2490</td>\n      <td>58.5</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Mindanao, Philippines</td>\n      <td>2010-12-30 16:56:14.930</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 13
     }
    ],
    "source": [
     "# Print dataframe\n",
     "\n",
-    "data_df= data_df[[\"Lat\",\"Lng\",\"Depth\",\"Mag\",\"MMI\",\"Sig\",\"Felt\",\"Place\",\"Country\",\"Time\",\"Month\",\"Day\",\"Year\"]]\n",
+    "data_df= data_df[[\"Lat\",\"Lng\",\"Depth\",\"Mag\",\"MMI\",\"Sig\",\"Felt\",\"Place\",\"Time\",\"Month\",\"Day\",\"Year\"]]\n",
     "\n",
     "data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df.to_csv(\"earthquake_data_2010-20.csv\", index= False)"
+    "data_df.to_csv(\"output_data/earthquake_data_2010-20.csv\", index= False)"
    ]
   },
   {
