--- a/project_quake_data_pull.ipynb
+++ b/project_quake_data_pull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Set base url parameters\n",
+    "base_url = \"https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson\"\n",
+    "magnitude = \"minmagnitude=5\"\n",
+    "limit = \"limit=19999\"\n",
+    "year=10\n",
+    "\n",
+    "# set up lists to hold reponse info\n",
+    "time_ls = []\n",
+    "lat_ls = []\n",
+    "lng_ls = []\n",
+    "depth_ls = []\n",
+    "mag_ls = []\n",
+    "mmi_ls = []\n",
+    "sig_ls = []\n",
+    "felt_ls = []\n",
+    "place_ls = []\n",
+    "\n",
+    "# iterate through years\n",
+    "for x in range (0,11):\n",
+    "    time = f\"starttime=20{year}-01-01&endtime=20{year}-12-31\"\n",
+    "    query_url = (f\"{base_url}&{time}&{magnitude}&{limit}\")\n",
+    "    response = requests.get(query_url).json()\n",
+    "\n",
+    "    # Append data to appropriate list\n",
+    "    for i in range (0, len(response[\"features\"])):\n",
+    "        mag_ls.append(response[\"features\"][i][\"properties\"][\"mag\"])\n",
+    "        place_ls.append(response[\"features\"][i][\"properties\"][\"place\"])\n",
+    "        time_ls.append(response[\"features\"][i][\"properties\"][\"time\"])\n",
+    "        felt_ls.append(response[\"features\"][i][\"properties\"][\"felt\"])\n",
+    "        mmi_ls.append(response[\"features\"][i][\"properties\"][\"mmi\"])\n",
+    "        sig_ls.append(response[\"features\"][i][\"properties\"][\"sig\"])\n",
+    "        lat_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][1])\n",
+    "        lng_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][0])\n",
+    "        depth_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][2])\n",
+    "    # counter for next year\n",
+    "    \n",
+    "    year=year+1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dictionary\n",
+    "data = {\n",
+    "    \"Time\": time_ls,\n",
+    "    \"Lat\": lat_ls,\n",
+    "    \"Lng\": lng_ls,\n",
+    "    \"Depth\": depth_ls,\n",
+    "    \"Mag\": mag_ls,\n",
+    "    \"MMI\": mmi_ls,\n",
+    "    \"Sig\": sig_ls,\n",
+    "    \"Felt\": felt_ls,\n",
+    "    \"Place\": place_ls\n",
+    "}\n",
+    "# create dataframe\n",
+    "data_df = pd.DataFrame(data)\n",
+    "\n",
+    "#convert timestamp to dates\n",
+    "data_df[\"Time\"] = pd.to_datetime(data_df[\"Time\"], unit=\"ms\")\n",
+    "data_df[\"Month\"] = pd.DatetimeIndex(data_df[\"Time\"]).month\n",
+    "data_df[\"Day\"] = pd.DatetimeIndex(data_df[\"Time\"]).day\n",
+    "data_df[\"Year\"] = pd.DatetimeIndex(data_df[\"Time\"]).year\n",
+    "\n",
+    "# #add country\n",
+    "# data_df[\"Country\"] = \"\"\n",
+    "\n",
+    "# for index, row in data_df.iterrows():\n",
+    "#     # get lat, lng from df\n",
+    "#     lat = row[\"Lat\"]\n",
+    "#     lng = row[\"Lng\"]\n",
+    "#     coordinates = (lat,lng)\n",
+    "#     result = rg.search(coordinates)\n",
+    "#     data_df.loc[index,\"Country\"] = result[0][\"cc\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -34,92 +120,34 @@
        "3  56.7391 -156.1674   58.1  5.0  NaN  385   NaN         Alaska Peninsula   \n",
        "4   9.9890  126.2490   58.5  5.0  NaN  385   NaN    Mindanao, Philippines   \n",
        "\n",
-       "                      Time  Month  Day  Year  \n",
-       "0  2010-12-30 23:47:03.930     12   30  2010  \n",
-       "1  2010-12-30 21:22:30.350     12   30  2010  \n",
-       "2  2010-12-30 19:56:36.380     12   30  2010  \n",
-       "3  2010-12-30 19:21:26.463     12   30  2010  \n",
-       "4  2010-12-30 16:56:14.930     12   30  2010  "
+       "                     Time  Month  Day  Year  \n",
+       "0 2010-12-30 23:47:03.930     12   30  2010  \n",
+       "1 2010-12-30 21:22:30.350     12   30  2010  \n",
+       "2 2010-12-30 19:56:36.380     12   30  2010  \n",
+       "3 2010-12-30 19:21:26.463     12   30  2010  \n",
+       "4 2010-12-30 16:56:14.930     12   30  2010  "
       ],
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Depth</th>\n      <th>Mag</th>\n      <th>MMI</th>\n      <th>Sig</th>\n      <th>Felt</th>\n      <th>Place</th>\n      <th>Time</th>\n      <th>Month</th>\n      <th>Day</th>\n      <th>Year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-31.8300</td>\n      <td>-178.1350</td>\n      <td>35.0</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Kermadec Islands region</td>\n      <td>2010-12-30 23:47:03.930</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-19.9840</td>\n      <td>168.3530</td>\n      <td>20.2</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Vanuatu</td>\n      <td>2010-12-30 21:22:30.350</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50.3800</td>\n      <td>153.9640</td>\n      <td>190.1</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Kuril Islands</td>\n      <td>2010-12-30 19:56:36.380</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>56.7391</td>\n      <td>-156.1674</td>\n      <td>58.1</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Alaska Peninsula</td>\n      <td>2010-12-30 19:21:26.463</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>9.9890</td>\n      <td>126.2490</td>\n      <td>58.5</td>\n      <td>5.0</td>\n      <td>NaN</td>\n      <td>385</td>\n      <td>NaN</td>\n      <td>Mindanao, Philippines</td>\n      <td>2010-12-30 16:56:14.930</td>\n      <td>12</td>\n      <td>30</td>\n      <td>2010</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 13
     }
    ],
    "source": [
-    "# Load data from CSVs to create dataframe\n",
-    "quakedata_201020_df = pd.read_csv(\"output_data/earthquake_data_2010-20.csv\")\n",
-    "quakedata_201020_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Lat      19703\n",
-       "Lng      19703\n",
-       "Depth    19703\n",
-       "Mag      19703\n",
-       "MMI       5367\n",
-       "Sig      19703\n",
-       "Felt      7128\n",
-       "Place    19703\n",
-       "Time     19703\n",
-       "Month    19703\n",
-       "Day      19703\n",
-       "Year     19703\n",
-       "dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "#  count\n",
-    "quakedata_201020_df.count()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Lat      3064\n",
-       "Lng      3064\n",
-       "Depth    3064\n",
-       "Mag      3064\n",
-       "MMI      3064\n",
-       "Sig      3064\n",
-       "Felt     3064\n",
-       "Place    3064\n",
-       "Time     3064\n",
-       "Month    3064\n",
-       "Day      3064\n",
-       "Year     3064\n",
-       "dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "# drop NAs\n",
-    "quakedata_201020_df.dropna(inplace = True) \n",
+    "# Print dataframe\n",
     "\n",
-    "#  count\n",
-    "quakedata_201020_df.count()"
+    "data_df= data_df[[\"Lat\",\"Lng\",\"Depth\",\"Mag\",\"MMI\",\"Sig\",\"Felt\",\"Place\",\"Time\",\"Month\",\"Day\",\"Year\"]]\n",
+    "\n",
+    "data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_df.to_csv(\"output_data/earthquake_data_2010-20.csv\", index= False)"
    ]
   },
   {
