--- a/data_pull_1990-1999.ipynb
+++ b/data_pull_1990-1999.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Set base url parameters\n",
     "base_url = \"https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson\"\n",
     "magnitude = \"minmagnitude=5\"\n",
     "limit = \"limit=19999\"\n",
-    "year=10\n",
+    "year=0\n",
     "\n",
     "# set up lists to hold reponse info\n",
     "time_ls = []\n",
@@ -42,7 +41,7 @@
     "\n",
     "# iterate through years\n",
     "for x in range (0,11):\n",
-    "    time = f\"starttime=20{year}-01-01&endtime=20{year}-12-31\"\n",
+    "    time = f\"starttime=199{year}-01-01&endtime=199{year}-12-31\"\n",
     "    query_url = (f\"{base_url}&{time}&{magnitude}&{limit}\")\n",
     "    response = requests.get(query_url).json()\n",
     "\n",
@@ -57,50 +56,12 @@
     "        depth_ls.append(response[\"features\"][i][\"geometry\"][\"coordinates\"][2])\n",
     "    # counter for next year\n",
     "    \n",
-    "    year=year+1\n",
-    "    "
+    "    year=year+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create dictionary\n",
-    "data = {\n",
-    "    \"Time\": time_ls,\n",
-    "    \"Lat\": lat_ls,\n",
-    "    \"Lng\": lng_ls,\n",
-    "    \"Depth\": depth_ls,\n",
-    "    \"Mag\": mag_ls,\n",
-    "    \"Sig\": sig_ls,\n",
-    "    \"Place\": place_ls\n",
-    "}\n",
-    "# create dataframe\n",
-    "data_df = pd.DataFrame(data)\n",
-    "\n",
-    "#convert timestamp to dates\n",
-    "data_df[\"Time\"] = pd.to_datetime(data_df[\"Time\"], unit=\"ms\")\n",
-    "data_df[\"Month\"] = pd.DatetimeIndex(data_df[\"Time\"]).month\n",
-    "data_df[\"Day\"] = pd.DatetimeIndex(data_df[\"Time\"]).day\n",
-    "data_df[\"Year\"] = pd.DatetimeIndex(data_df[\"Time\"]).year\n",
-    "\n",
-    "# #add country\n",
-    "# data_df[\"Country\"] = \"\"\n",
-    "\n",
-    "# for index, row in data_df.iterrows():\n",
-    "#     # get lat, lng from df\n",
-    "#     lat = row[\"Lat\"]\n",
-    "#     lng = row[\"Lng\"]\n",
-    "#     coordinates = (lat,lng)\n",
-    "#     result = rg.search(coordinates)\n",
-    "#     data_df.loc[index,\"Country\"] = result[0][\"cc\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,95 +100,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-31.8300</td>\n",
-       "      <td>-178.1350</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>385</td>\n",
-       "      <td>Kermadec Islands region</td>\n",
-       "      <td>2010-12-30 23:47:03.930</td>\n",
+       "      <td>18.668</td>\n",
+       "      <td>-107.016</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>416</td>\n",
+       "      <td>off the coast of Jalisco, Mexico</td>\n",
+       "      <td>1990-12-30 21:30:29.200</td>\n",
        "      <td>12</td>\n",
        "      <td>30</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>1990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-19.9840</td>\n",
-       "      <td>168.3530</td>\n",
-       "      <td>20.2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>385</td>\n",
-       "      <td>Vanuatu</td>\n",
-       "      <td>2010-12-30 21:22:30.350</td>\n",
+       "      <td>-5.097</td>\n",
+       "      <td>150.967</td>\n",
+       "      <td>178.6</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>865</td>\n",
+       "      <td>New Britain region, Papua New Guinea</td>\n",
+       "      <td>1990-12-30 19:14:18.930</td>\n",
        "      <td>12</td>\n",
        "      <td>30</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>1990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>50.3800</td>\n",
-       "      <td>153.9640</td>\n",
-       "      <td>190.1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>385</td>\n",
-       "      <td>Kuril Islands</td>\n",
-       "      <td>2010-12-30 19:56:36.380</td>\n",
+       "      <td>-20.737</td>\n",
+       "      <td>-173.493</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>400</td>\n",
+       "      <td>Tonga</td>\n",
+       "      <td>1990-12-30 14:31:43.860</td>\n",
        "      <td>12</td>\n",
        "      <td>30</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>1990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>56.7391</td>\n",
-       "      <td>-156.1674</td>\n",
-       "      <td>58.1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>385</td>\n",
-       "      <td>Alaska Peninsula</td>\n",
-       "      <td>2010-12-30 19:21:26.463</td>\n",
+       "      <td>11.265</td>\n",
+       "      <td>139.584</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>400</td>\n",
+       "      <td>State of Yap, Federated States of Micronesia</td>\n",
+       "      <td>1990-12-30 11:47:40.950</td>\n",
        "      <td>12</td>\n",
        "      <td>30</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>1990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9.9890</td>\n",
-       "      <td>126.2490</td>\n",
-       "      <td>58.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>385</td>\n",
-       "      <td>Mindanao, Philippines</td>\n",
-       "      <td>2010-12-30 16:56:14.930</td>\n",
+       "      <td>23.944</td>\n",
+       "      <td>121.860</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>416</td>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>1990-12-30 10:31:17.570</td>\n",
        "      <td>12</td>\n",
        "      <td>30</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>1990</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Lat       Lng  Depth  Mag  Sig                    Place  \\\n",
-       "0 -31.8300 -178.1350   35.0  5.0  385  Kermadec Islands region   \n",
-       "1 -19.9840  168.3530   20.2  5.0  385                  Vanuatu   \n",
-       "2  50.3800  153.9640  190.1  5.0  385            Kuril Islands   \n",
-       "3  56.7391 -156.1674   58.1  5.0  385         Alaska Peninsula   \n",
-       "4   9.9890  126.2490   58.5  5.0  385    Mindanao, Philippines   \n",
+       "      Lat      Lng  Depth  Mag  Sig  \\\n",
+       "0  18.668 -107.016   33.0  5.2  416   \n",
+       "1  -5.097  150.967  178.6  7.5  865   \n",
+       "2 -20.737 -173.493   33.0  5.1  400   \n",
+       "3  11.265  139.584   65.2  5.1  400   \n",
+       "4  23.944  121.860   10.0  5.2  416   \n",
        "\n",
-       "                     Time  Month  Day  Year  \n",
-       "0 2010-12-30 23:47:03.930     12   30  2010  \n",
-       "1 2010-12-30 21:22:30.350     12   30  2010  \n",
-       "2 2010-12-30 19:56:36.380     12   30  2010  \n",
-       "3 2010-12-30 19:21:26.463     12   30  2010  \n",
-       "4 2010-12-30 16:56:14.930     12   30  2010  "
+       "                                          Place                    Time  \\\n",
+       "0              off the coast of Jalisco, Mexico 1990-12-30 21:30:29.200   \n",
+       "1          New Britain region, Papua New Guinea 1990-12-30 19:14:18.930   \n",
+       "2                                         Tonga 1990-12-30 14:31:43.860   \n",
+       "3  State of Yap, Federated States of Micronesia 1990-12-30 11:47:40.950   \n",
+       "4                                        Taiwan 1990-12-30 10:31:17.570   \n",
+       "\n",
+       "   Month  Day  Year  \n",
+       "0     12   30  1990  \n",
+       "1     12   30  1990  \n",
+       "2     12   30  1990  \n",
+       "3     12   30  1990  \n",
+       "4     12   30  1990  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# create dictionary\n",
+    "data = {\n",
+    "    \"Time\": time_ls,\n",
+    "    \"Lat\": lat_ls,\n",
+    "    \"Lng\": lng_ls,\n",
+    "    \"Depth\": depth_ls,\n",
+    "    \"Mag\": mag_ls,\n",
+    "    \"Sig\": sig_ls,\n",
+    "    \"Place\": place_ls\n",
+    "}\n",
+    "# create dataframe\n",
+    "data_df = pd.DataFrame(data)\n",
+    "\n",
+    "#convert timestamp to dates\n",
+    "data_df[\"Time\"] = pd.to_datetime(data_df[\"Time\"], unit=\"ms\")\n",
+    "data_df[\"Month\"] = pd.DatetimeIndex(data_df[\"Time\"]).month\n",
+    "data_df[\"Day\"] = pd.DatetimeIndex(data_df[\"Time\"]).day\n",
+    "data_df[\"Year\"] = pd.DatetimeIndex(data_df[\"Time\"]).year\n",
+    "\n",
     "# Print dataframe\n",
     "\n",
     "data_df= data_df[[\"Lat\",\"Lng\",\"Depth\",\"Mag\",\"Sig\",\"Place\",\"Time\",\"Month\",\"Day\",\"Year\"]]\n",
@@ -237,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df.to_csv(\"output_data/earthquake_data_2010-20.csv\", index= False)"
+    "data_df.to_csv(\"output_data/earthquake_data_1990-99.csv\", index= False)"
    ]
   },
   {
