--- a/data_pull_1980-1989.ipynb
+++ b/data_pull_1980-1989.ipynb
@@ -234,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (PythonData)",
+   "display_name": "Python [conda env:.conda-PythonData]*",
    "language": "python",
    "name": "myenv"
   },
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
