Major earthquake gmaps

--- a/earthquakes_usa.ipynb
+++ b/earthquakes_usa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4  1980-10-25 11:00:05.100     10   25  1980      NC  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "575     10   19  2020      US  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,18 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6dcf417175a84ebe979c2f989eb6acc3",
+       "model_id": "23e8f72e255f4f6f9dde043c6284f550",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Figure(layout=FigureLayout(border='1px solid black', height='400px', margin='0 auto 0 auto', padding='1px', wi…"
+       "Figure(layout=FigureLayout(height='420px'))"
       ]
      },
      "metadata": {},
@@ -714,7 +714,7 @@
     }
    ],
    "source": [
-    "\n",
+    "fig = gmaps.figure()\n",
     "# Create marker layer\n",
     "markers = gmaps.marker_layer(locations, info_box_content=large_quake_info)\n",
     "\n",
@@ -724,13 +724,6 @@
     "# Display figure\n",
     "fig"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
