--- a/00b-project_quake_combine_full_csv.ipynb
+++ b/00b-project_quake_combine_full_csv.ipynb
@@ -91,6 +91,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Lat      819959\n",
+       "Lng      819959\n",
+       "Depth    819959\n",
+       "Mag      777833\n",
+       "MMI        4322\n",
+       "Sig      819959\n",
+       "Felt      14229\n",
+       "Place    819956\n",
+       "Time     819959\n",
+       "Month    819959\n",
+       "Day      819959\n",
+       "Year     819959\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "weather_full_data.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
